--- a/02.多项检索用时分析/requirements.txt
+++ b/02.多项检索用时分析/requirements.txt
@@ -1,1 +1,25 @@
+appnope==0.1.0
+backports.shutil-get-terminal-size==1.0.0
+certifi==2017.7.27.1
+chardet==3.0.4
+decorator==4.1.2
+enum34==1.1.6
+idna==2.6
+ipython==5.5.0
+ipython-genutils==0.2.0
 MySQL-python==1.2.5
+pathlib2==2.3.0
+pexpect==4.2.1
+pickleshare==0.7.4
+prompt-toolkit==1.0.15
+ptyprocess==0.5.2
+Pygments==2.2.0
+requests==2.18.4
+scandir==1.6
+semver==2.7.9
+simplegeneric==0.8.1
+six==1.11.0
+solrcloudpy==2.4.1
+traitlets==4.3.2
+urllib3==1.22
+wcwidth==0.1.7
