--- a/02.多项检索用时分析/requirements.txt
+++ b/02.多项检索用时分析/requirements.txt
@@ -4,6 +4,7 @@ certifi==2017.7.27.1
 chardet==3.0.4
 decorator==4.1.2
 enum34==1.1.6
+happybase==1.1.0
 idna==2.6
 ipython==5.5.0
 ipython-genutils==0.2.0
@@ -11,6 +12,7 @@ MySQL-python==1.2.5
 pathlib2==2.3.0
 pexpect==4.2.1
 pickleshare==0.7.4
+ply==3.10
 prompt-toolkit==1.0.15
 ptyprocess==0.5.2
 Pygments==2.2.0
@@ -20,6 +22,7 @@ semver==2.7.9
 simplegeneric==0.8.1
 six==1.11.0
 solrcloudpy==2.4.1
+thriftpy==0.3.9
 traitlets==4.3.2
 urllib3==1.22
 wcwidth==0.1.7
