--- a/02.多项检索用时分析/requirements.txt
+++ b/02.多项检索用时分析/requirements.txt
@@ -2,6 +2,7 @@ appnope==0.1.0
 backports.shutil-get-terminal-size==1.0.0
 certifi==2017.7.27.1
 chardet==3.0.4
+click==6.7
 decorator==4.1.2
 enum34==1.1.6
 happybase==1.1.0
