--- a/06.测试SparkSQL并行处理能力/requirements.txt
+++ b/06.测试SparkSQL并行处理能力/requirements.txt
@@ -1,7 +1,12 @@
+certifi==2017.11.5
+chardet==3.0.4
 click==6.7
 future==0.16.0
+idna==2.6
 PyHive==0.5.0
+requests==2.18.4
 sasl==0.2.1
 six==1.11.0
 thrift==0.10.0
 thrift-sasl==0.3.0
+urllib3==1.22
